# ann-fab

./: .gitignore  .travis.yml  Dockerfile  MAINTAINERS  MANIFEST.in  README.md  pytest.ini  requirements.txt  setup.py  start_docker.sh  tox.ini
annfab/: batch_hasher.py  hasher.py  proto_defs.proto  utils.py
annfab/distances/: __init__.py  matrix.py  matrix_cosine.py
annfab/filters/: __init__.py  matrix.py
annfab/hashes/: __init__.py  matrix.py
annfab/storage/: __init__.py  storage_lmdb.py
annfab/tests/: test_annfab.py  test_hashes.py  test_lib.py  test_lmdb_storage.py  test_matrix_distance.py  test_matrix_filters.py  test_utils.py
cpp/: CMakeLists.txt  redist.sh
cpp/cmake/: Cuda.cmake  Dependencies.cmake  Targets.cmake
cpp/cmake/Modules/: FindNumPy.cmake
cpp/include/annfab/: annfab_cuda_utils.hpp  common.hpp  math_functions.hpp  random_binary_projection.hpp
cpp/python/: CMakeLists.txt  _annfab.cpp
cpp/src/annfab/: CMakeLists.txt  common.cpp  math_functions.cpp  math_functions.cu  random_binary_projection.cpp  random_binary_projection.cu
examples/: README.md  config.py  generate.py  get_mnist.py  show_images.py
examples/mnist_utils/: main.py
